# fuzzy-clone

./: Cargo.toml  README.md
.github/workflows/: build.yml
script/: app  bootstrap  check-semver  test
src/: config.rs  file.rs  fuzzy.rs  git.rs  github.rs  main.rs  repo_names_store.rs
