[package]
name = "fzf-repo-clone"
version = "0.1.0"
authors = ["Ryan Perry-Nguyen <ryanperrynguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
dotenv = "^0"
dotenv_codegen = "^0"
env_logger = "^0.7"
lazy_static = "^1"
log = "^0.4"
regex = "^1"
reqwest = { version = "^0", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json =  "^1"
