[package]
name = "fzf-repo-clone"
version = "0.1.0"
authors = ["Ryan Perry-Nguyen <ryanperrynguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = "3.0.0-beta.2"
dirs = "^3.0"
dotenv = "^0.15"
dotenv_codegen = "^0.15"
env_logger = "^0.8"
skim = "^0.9"
futures = "^0.3"
lazy_static = "^1.4"
log = "^0.4"
regex = "^1.4"
reqwest = { version = "^0.10", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json =  "^1.0"
tokio = { version = "^0.2", features = ["full"] }
url = "^2.2"
